# aniki

./: .gitignore  Cargo.toml  README.md  aniki.conf  build.rs
assets/: missing-thumbnail.xcf
src/: anilist_serde.rs  main.rs
src/config/: mod.rs  parser.rs
src/database/: episode.rs  json_database.rs  mod.rs  sanitize.rs
src/http/: anime_list.gql  mod.rs
src/ui/: attach_flag_screen.rs  episode_screen.rs  layout.rs  login_screen.rs  main_screen.rs  mod.rs  update_anilist_media.gql
