[package]
name = "aniki"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "off"

[dependencies]
sdl2 = { version = "0.36.0", features = ["image", "ttf", "gfx"] }
flexbuffers = "2.0.0"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
walkdir = "2.4.0"
fuzzy-matcher = "0.3.7"
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.76"
native-dialog = "0.7.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
